Basic background for board

--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,1 +1,7 @@
-<h1 class="has-text-primary">Sudoku bitches</h1>
+<h1 class="is-size-1 has-text-primary has-text-centered">Sudoku bitches</h1>
+
+<div class="columns">
+  <div class="column is-8 is-offset-2 has-background-light">
+
+  </div>
+</div>
