Grid exists but isn't showing

--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,4 +1,4 @@
-<h1 class="is-size-1 has-text-primary has-text-centered">Sudoku bitches</h1>
+<h1 class="is-size-1 has-text-primary has-text-centered">Sudoku!!!!</h1>
 
 <div class="columns">
   <div class="column is-8 is-offset-2 has-background-light">
